# django-cms-multilang-template

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: example.sqlite3
src/apps/content/: admin.py  models.py
src/apps/content/migrations/: 0001_initial.py
src/basics/templates/basics/: base.html
src/plugins/tag/: apps.py  cms_plugins.py  constants.py  models.py
src/plugins/tag/migrations/: 0001_initial.py  0002_alter_tag_tag.py  0003_auto_20220220_2301.py
src/plugins/tag/templates/plugins/: tag.html
src/project/: urls.py
src/project/settings/: base.py  dev.py  prod.py  settings.example.ini
